--- a/my-dict-react/src/App.css
+++ b/my-dict-react/src/App.css
@@ -6,3 +6,8 @@ margin: 30px 0;
   display: block;
   margin: 0 auto;
 }
+.App footer {
+  font-family: monospace;
+  font-weight: 500;
+  line-height: 1.5;
+}
