--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
-  background-color:#e8e1e1 ;
+  background-color:#2a2b02;
   max-width: 900px;
+  padding: 0 30px;
   margin: 0 auto;
 }
 .App-header {
@@ -17,5 +18,8 @@ margin: 30px 0;
   line-height: 1.5;
 }
 .App h1 {
+  margin-top: 10px;
   font-weight: bold;
+  color: #fff;
+  opacity: 0.7;
 }
