--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,5 +1,5 @@
 .Dictionary section {
-  background: white;  
+  background: #7ffd;  
   padding: 30px;
   border-radius: 5px;
   box-shadow: 0 20px 10px rgba(0, 0, 0, 10%);
@@ -8,11 +8,17 @@
 .Dictionary input {
     width: 100%;
     border-radius: 4px;
-    border: 1px solid black;
+    border: 1px solid #000;
+    padding: 10px;
+    opacity: 0.7;
 }
 .Dictionary .text {
+  color: #000;
   font-size: 1.0rem;
   font-weight: bold;
   line-height: 1.5;
   margin-bottom: 0.5rem;
+}
+.Dictionary .hint {
+  padding: 10px 0;
 }
