--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -1,10 +1,13 @@
 .Phonetic {
     height: 60px;
+    padding: 20px 0;
 }
 .Phonetic a{
     border: 1px solid #ddd;
     text-decoration: none;
     padding: 10px 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     font-size: 13px;
     margin-right: 10px;
     font-weight: bold;
