--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -3,11 +3,11 @@
     padding: 20px 0;
 }
 .Phonetic a{
-    border: 1px solid #ddd;
+    border: 1px solid #000;
     text-decoration: none;
     padding: 10px 20px;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     font-size: 13px;
     margin-right: 10px;
     font-weight: bold;
